Bump versions, tweak surefire to run the way gwt+junit3 expects